# outline-cli

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md
docs/demo/: completions.tape  helper-new.tape  helper-search.tape  safety.tape  schema.tape  text-vs-json.tape
examples/openclaw/: credentials.json.example  openclaw.json.example
examples/openclaw/skills/outline-cli/: SKILL.md
src/: lib.rs  main.rs
src/auth/: credentials.rs  mod.rs
src/commands/: builder.rs  mod.rs
src/executor/: http.rs  mod.rs
src/helpers/: documents.rs  mod.rs
src/mcp/: server.rs
src/output/: color.rs  formatter.rs  mod.rs  table.rs  tty.rs
src/spec/: loader.rs  mod.rs  parser.rs  resolver.rs  validator.rs
src/validate/: input.rs  mod.rs
tests/: mcp_test.rs  retry_test.rs
