[package]
name = "outline-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI-agent-first CLI for Outline"
repository = "https://github.com/ryanbateman/outline-cli"

[lib]
name = "outline_cli"
path = "src/lib.rs"

[[bin]]
name = "outline"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
dirs = "6"
is-terminal = "0.4"
open = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rmcp = { version = "1", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"
wiremock = "0.6"
